# clue-board-game-with-llm

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/clue_game/: crew.py  game_state.py  main.py  notebook.py
src/clue_game/config/: tasks.yaml
src/clue_game/tools/: game_tools.py
tests/: test_game_state.py  test_game_tools.py  test_main.py
